Completed basic website setting, heading, and contacts sections.
Needs skills, achievements, academics, about, projects sections, and style.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Personal Portfolio by Brian Park</title>
+  <meta name="description" content="Brian Park, portfolio, projects, skills, information, achievements, and contact." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <!--Heading-->
+    <header class="page-header">
+        <div class="container header-inner">
+            <div class="information">
+                <h1 class="name">Brian Park</h1>
+                <p class="tag">Walton High school - 10th grade</p>
+            </div>
 
+            <nav class="nav">
+                <button id="nav-toggle" aria-label="Open navigation">&#9776</button>
+                    <ul id="nav-list" class="nav-list">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#academics">Academics</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#achievements&activities">Achievements & Activities</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a class="link" href="https://github.com/brianpark12" target="_blank" rel="opener">
+                            <svg 
+                            width="24" 
+                            height="24" 
+                            viewBox="0 0 24 24" 
+                            fill="currentColor" 
+                            aria-hidden="true"
+>                       
+                            <path d="M12 .5C5.65.5.5 5.65.5 12c0 5.1 3.3 9.4 7.8 10.9.57.1.78-.25.78-.55v-2c-3.18.7-3.85-1.37-3.85-1.37-.52-1.3-1.27-1.65-1.27-1.65-1.04-.72.08-.7.08-.7 1.15.08 1.76 1.2 1.76 1.2 1.02 1.76 2.68 1.25 3.33.95.1-.74.4-1.25.72-1.54-2.54-.29-5.22-1.27-5.22-5.65 0-1.25.44-2.27 1.17-3.07-.12-.29-.52-1.48.11-3.08 0 0 .97-.31 3.18 1.17a10.7 10.7 0 0 1 5.8 0c2.2-1.48 3.18-1.17 3.18-1.17.63 1.6.23 2.79.11 3.08.73.8 1.17 1.82 1.17 3.07 0 4.4-2.7 5.36-5.25 5.64.41.35.78 1.04.78 2.1v3.12c0 .3.2.67.8.55A10.98 10.98 0 0 0 23.5 12c0-6.35-5.15-11.5-11.5-11.5Z" />
+                            </svg>
+                        </a></li>
+                        <li><a class="link" href="mailto:brianytspark@gmail.com" target="_blank" rel="opener">
+                            <svg 
+                                width="24" 
+                                height="24" 
+                                viewBox="0 0 24 24" 
+                                fill="currentColor" 
+                                aria-hidden="true"
+>
+                                <path d="M20 4H4C2.9 4 2 4.9 2 6v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2Zm-1.4 3.25-6.3 4.72a.5.5 0 0 1-.6 0L5.4 7.25A1 1 0 0 1 6 6h12c.1 0 .3 0 .4.1.5.2.7.9.2 1.15Z"/>
+                            </svg>
+                        </a></li>
+                    </ul>
+                <button id="background-toggle" class="background-toggle" aria-label="Toggle dark mode">&#127762</button>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <!--Hero-->
+        <section id="hero" class="hero container">
+            <div class="hero-left">
+                <h2 class="headline">
+
+        </section>
+        
+        <!--Contacts-->
+        <section id="contact" class="container section">
+            <h3 class="section-title">Contact</h3>
+            <p>Thank you for visiting my portfolio! I have posted all my projects in Github in the link below.</p>
+            <p>Please feel free to contact me through my personal email if you have any questions!</p>
+            <ul class="contact-list">
+                <li>Personal Email: <a class="link" href="mailto:brianytspark@gmail.com" target="_blank" rel="opener"> brianytspark@gmail.com</a></li>
+                <li>School Email: <a class="link" href="mailto:Brian.Park@students.cobbk12.org" target="_blank" rel="opener"> Brian.Park@students.cobbk12.org</a></li>
+                <li>Github: <a class="link" href="https://github.com/brianpark12" target="_blank" rel="opener"> brianpark12</a></li>
+            </ul>
+        </section>
+    </main>
+</body>
+</html>
